Agregué tarjetas Bootstrap en productos.html, cambié Grid a Flexbox en style, agregue favicon

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!-- Meta y enlaces -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Granja El Paraíso</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="imagenes/favicon/favicon_grano_de_cafe.png">
 </head>
 <body>
     <!-- Header -->
@@ -30,9 +30,8 @@
             <section>
                 <div class="home-content">
                     <h1>Bienvenidos a Granja El Paraíso</h1>
-                    <img src="imagenes/logo/logo_lorem_ipsum.jpg" alt="Logotipo oficial de Granja El Paraíso" loading="lazy">
-                    <p>En la Granja El Paraíso, una finca familiar en el corazón de las tierras cafeteras, producimos cafés de especialidad que destacan por su calidad y sabor único. Cultivamos variedades como Java, Bourbon Pink, Geisha, Pacamara y más, utilizando técnicas innovadoras como riego por goteo, fermentación anaeróbica controlada y un sellado térmico especial que resalta sus propiedades organolépticas.</p>
-                    <p>Desde nuestra planta de procesamiento hasta tu taza, ofrecemos granos galardonados que reflejan nuestra pasión por el café. Conocé nuestra historia, descubrí nuestro proceso y explorá los productos que hacen de Granja El Paraíso una experiencia inolvidable.</p>
+                    <p>En Granja El Paraíso, nos dedicamos a cultivar café de alta calidad con pasión y cuidado, respetando la tierra y las tradiciones de nuestra región. Cada grano cuenta una historia de esfuerzo, sostenibilidad y excelencia.</p>
+                    <img src="imagenes/logo/logo_lorem_ipsum.jpg" alt="Logo de Granja El Paraíso" loading="lazy">
                     <img src="imagenes/proceso/cerezas_cafe_cosecha.jpg" alt="Cerezas de café cosechadas en Granja El Paraíso" class="cerezas-img" loading="lazy">
                 </div>
             </section>
