--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Navegación -->
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html" class="active">Inicio</a></li>
                 <li><a href="page/nuestra_historia.html">Nuestra Historia</a></li>
                 <li><a href="page/proceso.html">Proceso</a></li>
                 <li><a href="page/productos.html">Productos</a></li>
