movi y cambie imagen lorem del index

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <section>
                 <div class="home-content">
                     <h1>Bienvenidos a Granja El Paraíso</h1>
+                    <img src="imagenes/logo/logo_granja_el_paraiso.png" alt="Logo de Granja El Paraíso" loading="lazy">
                     <p>En Granja El Paraíso, nos dedicamos a cultivar café de alta calidad con pasión y cuidado, respetando la tierra y las tradiciones de nuestra región. Cada grano cuenta una historia de esfuerzo, sostenibilidad y excelencia.</p>
-                    <img src="imagenes/logo/logo_lorem_ipsum.jpg" alt="Logo de Granja El Paraíso" loading="lazy">
                     <img src="imagenes/proceso/cerezas_cafe_cosecha.jpg" alt="Cerezas de café cosechadas en Granja El Paraíso" class="cerezas-img" loading="lazy">
                 </div>
             </section>
